# prompt-vault

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
prompt_vault/: __init__.py  config.py  database.py  main.py  migrate.py  models.py
prompt_vault/providers/: __init__.py  anthropic_provider.py  base.py  lmstudio_provider.py  openai_provider.py  registry.py
prompt_vault/routes/: api.py  gateway.py  openai_compat.py  ui.py
prompt_vault/services/: anthropic_provider.py  json_logger.py  openai_provider.py  prompt_service.py
prompt_vault/static/: style.css  workspace.css
prompt_vault/templates/: base.html  compare.html  dashboard.html  detail.html  index.html  prompts.html  stats.html  workspace.html
prompt_vault/templates/partials/: prompt_list.html
